--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,6 @@
 // Inspired by rayronvictor's PR #248 tp react-native-config
 // https://github.com/luggit/react-native-config/pull/248
 
-def _ext = rootProject.ext
-
 buildscript {
   repositories {
     maven {
@@ -14,17 +12,17 @@ buildscript {
   }
 
   dependencies {
-    classpath _ext.has('gradleBuildTools') ? _ext.gradleBuildTools : 'com.android.tools.build:gradle:3.4.0'
+    classpath 'com.android.tools.build:gradle:3.4.0'
   }
 }
 
 apply plugin: 'com.android.library'
 
-def _reactNativeVersion = _ext.has('reactNative') ? _ext.reactNative : '+'
-def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 27
-def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '27.0.3'
-def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
-def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 27
+def _reactNativeVersion = '+'
+def _compileSdkVersion = 27
+def _buildToolsVersion = '27.0.3'
+def _minSdkVersion = 16
+def _targetSdkVersion = 27
 
 android {
   compileSdkVersion _compileSdkVersion
